Упростил и пофиксил тесты