@@ -14,10 +14,8 @@ import org.testcontainers.junit.jupiter.Container;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Statement;
-import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -80,10 +78,8 @@ public class UserRepositoryImplTest {
 
     @Test
     public void testCreateUser() {
-        User user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password");
-        user.setName("John");
-        user.setSurname("Doe");
-        user.setPhone("1234567890");
+        var user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password",
+                "John","Doe","1234567890");
 
         boolean userCreated = userRepository.create(user);
         assertTrue(userCreated, "User should be created");
@@ -93,10 +89,8 @@ public class UserRepositoryImplTest {
 
     @Test
     public void testDeleteUser() {
-        User user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password");
-        user.setName("John");
-        user.setSurname("Doe");
-        user.setPhone("1234567890");
+        var user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password",
+                "John","Doe","1234567890");
 
         boolean userCreated = userRepository.create(user);
         assertTrue(userCreated, "User should be created");
@@ -110,10 +104,8 @@ public class UserRepositoryImplTest {
 
     @Test
     public void testUpdateUser() {
-        User user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password");
-        user.setName("John");
-        user.setSurname("Doe");
-        user.setPhone("1234567890");
+        var user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password",
+                "John","Doe","1234567890");
 
         boolean userCreated = userRepository.create(user);
         assertTrue(userCreated, "User should be created");
@@ -123,49 +115,43 @@ public class UserRepositoryImplTest {
         user.setPhone("0987654321");
         userRepository.update(user);
 
-        Optional<User> fetchedUser = userRepository.findById(user.getId());
-        assertTrue(fetchedUser.isPresent(), "User should be found");
-        assertEquals("Jane", fetchedUser.get().getName(), "User name should match after update");
-        assertEquals("Smith", fetchedUser.get().getSurname(), "User surname should match after update");
-        assertEquals("0987654321", fetchedUser.get().getPhone(), "User phone should match after update");
+        var fetchedUserOpt = userRepository.findById(user.getId());
+        assertTrue(fetchedUserOpt.isPresent(), "User should be found");
+        assertEquals("Jane", fetchedUserOpt.get().getName(), "User name should match after update");
+        assertEquals("Smith", fetchedUserOpt.get().getSurname(), "User surname should match after update");
+        assertEquals("0987654321", fetchedUserOpt.get().getPhone(), "User phone should match after update");
     }
 
     @Test
     public void testFindById() {
-        User user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password");
-        user.setName("John");
-        user.setSurname("Doe");
-        user.setPhone("1234567890");
+        var user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password",
+                "John","Doe","1234567890");
 
         boolean userCreated = userRepository.create(user);
         assertTrue(userCreated, "User should be created");
 
-        Optional<User> fetchedUser = userRepository.findById(user.getId());
-        assertTrue(fetchedUser.isPresent(), "User should be found");
-        assertEquals(user.getUsername(), fetchedUser.get().getUsername(), "Username should match");
-        assertEquals(user.getName(), fetchedUser.get().getName(), "Name should match");
-        assertEquals(user.getSurname(), fetchedUser.get().getSurname(), "Surname should match");
-        assertEquals(user.getPhone(), fetchedUser.get().getPhone(), "Phone should match");
+        var fetchedUserOpt = userRepository.findById(user.getId());
+        assertTrue(fetchedUserOpt.isPresent(), "User should be found");
+        assertEquals(user.getUsername(), fetchedUserOpt.get().getUsername(), "Username should match");
+        assertEquals(user.getName(), fetchedUserOpt.get().getName(), "Name should match");
+        assertEquals(user.getSurname(), fetchedUserOpt.get().getSurname(), "Surname should match");
+        assertEquals(user.getPhone(), fetchedUserOpt.get().getPhone(), "Phone should match");
     }
 
     @Test
     public void testFindAll() {
-        User user1 = new User(Role.CLIENT, "username1" + System.currentTimeMillis(), "password");
-        user1.setName("John");
-        user1.setSurname("Doe");
-        user1.setPhone("1234567890");
+        var user1 = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password",
+                "John","Doe","1234567890");
 
-        User user2 = new User(Role.MANAGER, "username2" + System.currentTimeMillis(), "password");
-        user2.setName("Jane");
-        user2.setSurname("Smith");
-        user2.setPhone("0987654321");
+        var user2 = new User(Role.MANAGER, "username2" + System.currentTimeMillis(), "password",
+                "Jane","Smith","0987654321");
 
         boolean user1Created = userRepository.create(user1);
         boolean user2Created = userRepository.create(user2);
         assertTrue(user1Created, "First user should be created");
         assertTrue(user2Created, "Second user should be created");
 
-        List<User> allUsers = userRepository.findAll();
+        var allUsers = userRepository.findAll();
         assertEquals(2, allUsers.size(), "Should return all users");
         assertTrue(allUsers.stream().anyMatch(u -> u.getId() == user1.getId()), "First user should be present");
         assertTrue(allUsers.stream().anyMatch(u -> u.getId() == user2.getId()), "Second user should be present");
@@ -173,54 +159,47 @@ public class UserRepositoryImplTest {
 
     @Test
     public void testFindByFilter() {
-        User user1 = new User(Role.CLIENT, "username1" + System.currentTimeMillis(), "password");
-        user1.setName("John");
-        user1.setSurname("Doe");
-        user1.setPhone("1234567890");
+        var user1 = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password",
+                "John","Doe","1234567890");
 
-        User user2 = new User(Role.MANAGER, "username2" + System.currentTimeMillis(), "password");
-        user2.setName("Jane");
-        user2.setSurname("Smith");
-        user2.setPhone("0987654321");
+        var user2 = new User(Role.MANAGER, "username2" + System.currentTimeMillis(), "password",
+                "Jane","Smith","0987654321");
 
         boolean user1Created = userRepository.create(user1);
         boolean user2Created = userRepository.create(user2);
+
         assertTrue(user1Created, "First user should be created");
         assertTrue(user2Created, "Second user should be created");
 
         Predicate<User> clientFilter = u -> u.getRole() == Role.CLIENT;
-        List<User> clients = userRepository.findByFilter(clientFilter).collect(Collectors.toList());
+        var clients = userRepository.findByFilter(clientFilter).toList();
         assertEquals(1, clients.size(), "Should return only clients");
         assertEquals(user1.getId(), clients.get(0).getId(), "Client user should match");
     }
 
     @Test
     public void testGetByUsernameAndPassword() {
-        User user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password");
-        user.setName("John");
-        user.setSurname("Doe");
-        user.setPhone("1234567890");
+        var user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password",
+                "John","Doe","1234567890");
 
         boolean userCreated = userRepository.create(user);
         assertTrue(userCreated, "User should be created");
 
-        Optional<User> fetchedUser = userRepository.getByUsernameAndPassword(user.getUsername(), user.getPassword());
-        assertTrue(fetchedUser.isPresent(), "User should be found by username and password");
-        assertEquals(user.getUsername(), fetchedUser.get().getUsername(), "Username should match");
+        var fetchedUserOpt = userRepository.getByUsernameAndPassword(user.getUsername(), user.getPassword());
+        assertTrue(fetchedUserOpt.isPresent(), "User should be found by username and password");
+        assertEquals(user.getUsername(), fetchedUserOpt.get().getUsername(), "Username should match");
     }
 
     @Test
     public void testGetByUsername() {
-        User user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password");
-        user.setName("John");
-        user.setSurname("Doe");
-        user.setPhone("1234567890");
+        var user = new User(Role.CLIENT, "username" + System.currentTimeMillis(), "password",
+                "John","Doe","1234567890");
 
         boolean userCreated = userRepository.create(user);
         assertTrue(userCreated, "User should be created");
 
-        Optional<User> fetchedUser = userRepository.getByUsername(user.getUsername());
-        assertTrue(fetchedUser.isPresent(), "User should be found by username");
-        assertEquals(user.getUsername(), fetchedUser.get().getUsername(), "Username should match");
+        var fetchedUserOpt = userRepository.getByUsername(user.getUsername());
+        assertTrue(fetchedUserOpt.isPresent(), "User should be found by username");
+        assertEquals(user.getUsername(), fetchedUserOpt.get().getUsername(), "Username should match");
     }
 }
